[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wheezy.security"
dynamic = ["version"]
description = "A lightweight security/cryptography library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Andriy Kornatskyy", email = "andriy.kornatskyy@live.com" }]
keywords = [
  "security",
  "ticket",
  "encryption",
  "cryptography",
  "pycrypto",
  "pycryptodome",
]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Security",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
cython = ["Cython>=3.0", "setuptools>=61.0"]

[project.urls]
Homepage = "https://github.com/akornatskyy/wheezy.security"
Source = "https://github.com/akornatskyy/wheezy.security"
Issues = "https://github.com/akornatskyy/wheezy.security/issues"

[tool.setuptools]
packages = ["wheezy.security", "wheezy.security.crypto"]
package-dir = { "" = "src" }
zip-safe = false
include-package-data = true

# [tool.setuptools.package-data]
# "wheezy.security" = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "wheezy.security.__version__" }

[tool.coverage.run]
source = ["src/wheezy/security"]
omit = ["*/test_*.py", "*/tests/*"]
